Refs #57865 fix share not aligned

--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -1266,7 +1266,7 @@ header.header-mini-light {
       text-decoration: none;
 
       @include max-screen($screen-tablet - 1 ) {
-        top: -0.375rem;
+        top: 0.5rem;
       }
 
       span {
